--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/translations/messages.es_es.yml
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/translations/messages.es_es.yml
@@ -79,29 +79,13 @@ census:
         h1_title:  Registro finalizado con éxito
         p1: Gracias por registrarte en el censo de votantes de la asamblea virtual de Ahora en Común
         p2: Vamos a construir colectivamente otra forma de gobernar por el bien común, por favor difunde esta iniciativa
-
-    change_password:
-        h1_title: Cambiar contraseña 
-        header: Cuenta administrador
-        h1_subtitle: Cambia la contraseña de tu cuenta administrador       
-        oldPassword: Contraseña antigua
-        newPassword: Contraseña nueva
-
-    recover_password:
-        h1_title: Recuperar contraseña 
-        header: Cuenta administrador
-        h1_subtitle: Recupera la contraseña de tu cuenta administrador       
-        recover: Nombre de usuario o dirección de correo electrónico
-        continue: Recuperar <i class="mine-icon fa fa-arrow-right icon-on-right"></i>
-        explanation: Si has olvidado tu nombre de usuario o tu contraseña, puedes solicitar que el envío por correo electrónico de tu nombre de usuario y restablecer tu contraseña. Si introduces el correo electrónico que has registrado, se enviará las instrucciones para restablecer tu contraseña
-
 mail:
     sms_inbound_verification:
         your_phone: Tu teléfono
         verify: ha sido verificado correctamente       
         
     census_confirmation:
-        message: Te has inscrito correctamente en el censo de Ahora en Común, gracias por participar, por favor envía a gente el enlace www.participasevilla.org para contribuir a esta construcción colectiva.
+        message: Te has inscrito correctamente en el censo de Ahora en Común, gracias por participar, por favor envía a gente el enlace www.ahoraencomun.info para contribuir a esta construcción colectiva.
 
 forms:
     census_step1:
